--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-calendar": "^0.29.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "moment": "^2.29.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
